# webquest

./: README.md  pyproject.toml
src/webquest/base/: __init__.py  base_scraper.py  browser_manager.py  openai_parser.py  runner.py  scraper.py
src/webquest/browser_managers/: hyperbrowser_manager.py
src/webquest/runners/: __init__.py  hyperbrowser.py
src/webquest/scrapers/: __init__.py  openai.py  openai_parser.py
src/webquest/scrapers/any_article/: __init__.py  schemas.py  scraper.py
src/webquest/scrapers/duckduckgo/: __init__.py  schemas.py  search.py
src/webquest/scrapers/duckduckgo_search/: __init__.py  schemas.py  scraper.py
src/webquest/scrapers/google_news_search/: __init__.py  scraper.py
src/webquest/scrapers/youtube/: __init__.py  schemas.py  transcript.py
src/webquest/scrapers/youtube_search/: __init__.py  schemas.py  scraper.py
src/webquest/scrapers/youtube_transcript/: __init__.py  schemas.py  scraper.py
test/: test_any_article.py  test_duckduckgo.py  test_duckduckgo_search.py  test_google_news_search.py  test_youtube.py  test_youtube_search.py  test_youtube_transcript.py
