[project]
name = "webquest"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.14.2",
    "html-to-markdown>=2.5.0",
    "hyperbrowser>=0.68.0",
    "openai>=2.6.0",
    "playwright>=1.55.0",
    "pydantic>=2.12.3",
    "pydantic-settings>=2.11.0",
]

[project.scripts]
webquest = "webquest:main"

[build-system]
requires = ["uv_build>=0.8.18,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
    "pytest-mypy>=1.0.1",
    "ruff>=0.14.1",
]

[tool.pytest.ini_options]
addopts = "--mypy"
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[[tool.mypy.overrides]]
module = ["hyperbrowser.*"]
ignore_missing_imports = true
